--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 matplotlib==3.9.2
 numpy==2.1.2
-opencv_python==4.10.0.84
-Pillow==11.0.0
+opencv-python==4.10.0.84
+Pillow>=7.1.0,<11
 Pyrebase4==4.8.0
-Requests==2.32.3
+requests==2.32.3
 streamlit==1.38.0
-streamlit_extras==0.5.0
+streamlit-extras==0.5.0
