--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 matplotlib==3.9.2
 numpy==2.1.2
-opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 Pillow>=7.1.0,<11
 Pyrebase4==4.8.0
 requests==2.32.3
